--- a/jliang-midware/pom.xml
+++ b/jliang-midware/pom.xml
@@ -23,6 +23,14 @@
             <version>${zookeeper.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/it.sauronsoftware.cron4j/cron4j -->
+        <dependency>
+            <groupId>it.sauronsoftware.cron4j</groupId>
+            <artifactId>cron4j</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
