--- a/jliang-midware/pom.xml
+++ b/jliang-midware/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>haoliang-midware</artifactId>
+    <artifactId>jliang-midware</artifactId>
 
     <properties>
         <zookeeper.version>3.4.6</zookeeper.version>
@@ -41,6 +41,12 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha1</version>
         </dependency>
 
     </dependencies>
