--- a/jliang-midware/pom.xml
+++ b/jliang-midware/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <zookeeper.version>3.4.6</zookeeper.version>
+        <rxjava.version>2.0.7</rxjava.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,30 @@
             <version>5.0.0.Alpha1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-core</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>${rxjava.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.aviator</groupId>
+            <artifactId>aviator</artifactId>
+            <version>2.3.4</version>
+        </dependency>
+
+        <!-- 熔断 -->
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
+            <version>1.5.18</version>
+        </dependency>
     </dependencies>
 
 </project>
