--- a/lgroovy/pom.xml
+++ b/lgroovy/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>groovy</artifactId>
             <version>2.4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.13</version>
+        </dependency>
     </dependencies>
 </project>
